--- a/.classpath
+++ b/.classpath
@@ -34,5 +34,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
+	<classpathentry kind="src" path="/NaveenAL"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
